using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace GenSpil.Model
{
    internal class BoardGame
    {
        private int _boardGameID;
        private string _title;

    }
}
