using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace GenSpil.Type;

/// <summary>
/// Role of the user
/// </summary>
public enum Role
{
    Admin,
    User,
    Guest
}
