classDiagram

class UserList {
    +list<User> Users
}
note for UserList "Indeholder en liste over brugere."

class User {
    +string Username
    +string Password
}
note for User "Bruges til at logge ind og administrere brugere.
Krav da vi har oplysinger på kunder (GPDR)."

class Role {
    <<enumeration>>
    Admin
    User
    Guest
}

class Customer {
    -string CustomerID
    -string Name
    -string Address
}
note for Customer "Administrerer personlige oplysninger og spilkøb/reservationer."

class CustomerList {
    +list<Customer> Customers
}
note for CustomerList "Indeholder en liste over kunder."

class BoardGame {
    +string GameID
    +string Title
    +string Description
    +Condition Condition
    +decimal Price
    +int StockQuantity
    +bool reperation
}
note for BoardGame "Repræsenterer et brugt brætspil med tilstand og lager."

class BoardGameList {
    +list<BoardGame> BoardGames
}

class reserved {
    +DateTime ReservedDate
    +int Quantity
}
note for reserved "Hvornår et brætspil er reserveret. Og til hvem"


class Condition {
    <<enumeration>>
    New
    Good
    Used
    Damaged
}
note for Condition "Tilstande et brætspil kan være i."

CustomerList "1" *-- "*" Customer : Indeholder
Customer "*" -- "*" BoardGameList : Køber
Customer "1" *-- "*" reserved : Reserverer
BoardGameList "1" -- "*" BoardGame : Indeholder
BoardGame "1" *-- "*" reserved : Reserveres
BoardGame "1" -- "1" Condition : Har
UserList "1" *-- "*" User : Indeholder
User "1" -- "1" Role : Har
